--- a/css/style.css
+++ b/css/style.css
@@ -219,5 +219,91 @@ textarea:focus, input:focus{
     margin-top: 7%;
 }
 
+/* =========== SIDE MENU =========== */
 
+.side-bar-menu{
+    position: absolute;
+    width: 130px;
+    height: 18px;
+    margin-left: 1136px;
+    margin-top: 128px;
+}
 
+.title-project{
+    width: 130px;
+    height: 18px;
+    margin-bottom: 10px;
+    font-family: 'Nuosu SIL', serif;
+    font-style: normal;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.4em;
+    text-transform: uppercase;
+    color: #fff;
+}
+.name-field input{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    width: 272px;
+    height: 40px;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.16);
+    flex: none;
+    order: 0;
+    align-items: stretch;
+    flex-grow: 0; 
+    margin-bottom: 15px;
+    border-style: hidden;
+    color: #fff;
+}
+
+.description-field input{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    width: 272px;
+    height: 56px;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.16);
+    flex: none;
+    order: 0;
+    align-items: stretch;
+    flex-grow: 0; 
+    margin-bottom: 15px;
+    border-style: hidden;
+    color: #fff;
+}
+
+ .name-field input::placeholder{
+    width: 159px;
+    height: 24px;
+    font-family: 'Nuosu SIL', serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    opacity: 0.64;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.description-field input::placeholder{
+    width: 159px;
+    height: 24px;
+    font-family: 'Nuosu SIL', serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    opacity: 0.64;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
