--- a/css/style.css
+++ b/css/style.css
@@ -357,10 +357,12 @@ textarea:focus, input:focus{
     border-radius: 4px;
 }
 
-.save button{
-    margin-top: 28.57;
-    margin-left: 30.67%;
-    margin-bottom: 28.57%;
+.btn button{
+    width: 232px;
+    height: 52px;
+    background: rgba(80, 129, 251, 1);
+    ;
+    margin-top: 20px;
     font-family: 'Nuosu SIL', serif;
     font-style: normal;
     font-weight: 400;
@@ -368,4 +370,5 @@ textarea:focus, input:focus{
     line-height: 24px;
     text-align: center;
     color: #051d3b;
+    border-radius: 8px;
 }
