--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,100 @@ textarea:focus, input:focus{
 .add-syntax-highlight button:hover{
     background: rgba(30, 92, 248, 0.08);
 }
+
+/* =========== COMMUNITY-PAGE =========== */
+
+.text-container-c{
+    width: 520px;
+    height: 385px;
+    margin-top: 128px;
+    margin-left: 344px;
+    border-radius: 8px;
+    padding: 32px;
+    gap: 10px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 32px;
+    background: rgba(154, 255, 107, 1);
+}
+
+.text-editor-comunity{
+    width: 472px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: -15px;
+    margin-left: -10px;
+    padding: 12px;
+    gap: 24px;
+    box-shadow: 0px 16px 24px rgba(0,0,0,0.24);
+    background: #141414;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.editor-container-comunity p{
+    width: 100%;
+    height: 50%;
+    font-family: 'Roboto Mono', monospace;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18.46px;
+    color: #fff;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin-top: 10%;
+    box-sizing: border-box;
+}
+
+.small-dot-1-c{
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    margin-left: 16px;
+    margin-top: 5px;
+    background: #ff5f56;
+    border-radius: 50%;
+}
+.small-dot-2-c{
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    margin-left: 36px;
+    margin-top: 5px;
+    background: #FFBD2E;
+    border-radius: 50%;
+}
+
+.small-dot-3-c{
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    margin-left: 56px;
+    margin-top: 5px;
+    background: #27C93F;
+    border-radius: 50%;
+}
+
+/* =========== SOCIAL-PART =========== */
+
+.social-container{
+    width: 472px;
+    height: 32px;
+    margin-left: 15px;
+    font-family: 'Nuosu SIL', serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 32px;
+    color: #fff;
+    margin-top: 30px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
