add likes and comments

--- a/css/style.css
+++ b/css/style.css
@@ -522,3 +522,16 @@ textarea:focus, input:focus{
     color: #fff;
     opacity: 0.8;
 }
+
+.social-interactions{
+    position: relative;
+    display: flex;
+    margin-top: 15px;
+    flex-direction: row;
+}
+
+.social-interactions svg{
+    color: #fff;
+    margin: 5px;
+}
+
